# az-sk-lab

./: .gitignore  README.md
create_kernel/: .env  main.py  pyproject.toml  requirements.txt
crew_ai_agents/: .env  pyproject.toml
crew_ai_agents/src/crew_ai_agents/: app.py  crew.py
crew_ai_agents/src/crew_ai_agents/config/: agents.yaml
sk_service/: app.py
