[project]
name = "crew_ai_agents"
version = "0.1.0"
description = "crew-ai-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
crew_ai_agents = "crew_ai_agents.main:run"
run_crew = "crew_ai_agents.main:run"
train = "crew_ai_agents.main:train"
replay = "crew_ai_agents.main:replay"
test = "crew_ai_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
